add authorization in swagger ui
